# termemu

./: .gitignore  LICENSE  README.md  meson.build
src/: Makefile  a.out  ansi_codes.cpp  ansi_codes.hpp  ansi_color_codes.hpp  config.cpp  config.hpp  draw_position.cpp  draw_position.hpp  emulator.cpp  emulator.hpp  glad.c  macros.hpp  meson.build  output_parser.cpp  output_parser.hpp  parser.cpp  parser.hpp  pty.cpp  pty.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shell.cpp  shell.hpp  termemu.cpp  text_buffer.cpp  text_buffer.hpp  text_container.cpp  text_container.hpp  user_input.cpp  user_input.hpp  utility.cpp  utility.hpp  window.cpp  window.hpp
tests/: Makefile  parser_tests.cpp  test_runner.cpp  test_runner.hpp  tests
tests/parser/: Makefile  parser_tests  parser_tests.cpp
tests/text_container/: Makefile  text_container_tests  text_container_tests.cpp
